@@ -188,7 +188,10 @@ BUG FIXES
         Thanks to Michael Nelson for highlighting. Tests added.
         
     o   Syntactically invalid column names (such as "Some rate (%)") are now preserved in X[Y] joins and
-        merge() as intended, #2193. Thanks to George Kaupas for reporting. Tests added.
+        merge() as intended, #2193(i). Thanks to George Kaupas for reporting. Tests added.
+        
+    o   merge() and setcolorder() now check for duplicate column names first rather than a less helpful
+        error later, #2193(ii). Thanks to Peter Fine for reporting. Tests added.
             
 
 USER VISIBLE CHANGES
@@ -235,7 +238,7 @@ THANKS TO BETA TESTING (bugs caught in 1.8.3 before release to CRAN)
 
 NOTES
 
-    o   There are now 827 raw tests. test.data.table() should return precisely this number of
+    o   There are now 830 raw tests. test.data.table() should return precisely this number of
         tests passed. If not, then somehow, a slightly stale version from R-Forge is likely
         installed; please reinstall from CRAN.
 
